# Intro-Artificial-Intelligence

./: Matplotlib.ipynb  Numpy.ipynb  Pandas.ipynb  Untitled.ipynb  covid-19_trendAnalysis.ipynb  python-for-data-science.ipynb
.ipynb_checkpoints/: Numpy-checkpoint.ipynb  Untitled-checkpoint.ipynb
Linear-regression/: Linear-regression.ipynb  linear-regression.ipynb  pyproject.toml
dataset/: ons.csv
